--- a/quizination.html
+++ b/quizination.html
@@ -18,11 +18,11 @@
 
 <!-- Game Design -->
 
-<div class="gameTitle">
-    <span id="gamename">Quizination</span>
-    <br/>
-    <a href="#" id="startClicker" style="text-decoration: none;font-size:48px;color:black;">Click to Start</a>
-</div>
+<!--<div class="gameTitle">-->
+    <!--<span id="gamename">Quizination</span>-->
+    <!--<br/>-->
+    <!--<a href="#" id="startClicker" style="text-decoration: none;font-size:48px;color:black;">Click to Start</a>-->
+<!--</div>-->
 
 <div class="game-wrapper" style="display: none;">
     <div id="splasher"></div>
